AI요약 기능 + 피그마 반영