@@ -1,19 +1,27 @@
 package com.example.seosancomplain.domain.complaint;
 
-import com.example.seosancomplain.domain.admin.AdminReportDto;
-import com.example.seosancomplain.domain.dashboard.DashboardResponseDto;
-import com.example.seosancomplain.domain.region.RegionPriorityDto;
-import com.example.seosancomplain.domain.region.RegionReportDto;
+import com.example.seosancomplain.domain.admin.comment.*;
+import com.example.seosancomplain.domain.admin.dto.AdminReportDto;
+import com.example.seosancomplain.domain.admin.dto.CategoryCountDto;
+import com.example.seosancomplain.dto.ComplaintMiniDto;
+import com.example.seosancomplain.domain.admin.dto.DashboardResponseDto;
 import com.example.seosancomplain.domain.region.RegionStatDto;
 import com.example.seosancomplain.domain.region.SeosanRegion;
-import com.example.seosancomplain.dto.*;
+import com.example.seosancomplain.dto.ComplaintDetailDto;
+import com.example.seosancomplain.dto.ComplaintRequestDto;
+import com.example.seosancomplain.dto.ComplaintResponseDto;
 import com.example.seosancomplain.exception.CustomException;
 import com.example.seosancomplain.exception.ErrorCode;
+import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Sort;
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
+import org.springframework.web.server.ResponseStatusException;
+import reactor.core.publisher.Mono;
+import reactor.core.scheduler.Schedulers;
 
 import java.time.LocalDate;
 import java.time.LocalDateTime;
@@ -25,34 +33,42 @@ import java.util.stream.Collectors;
 public class ComplaintService {
 
     private final ComplaintRepository complaintRepository;
+    private final com.example.seosancomplain.domain.ai.SummarizerClient summarizerClient;
+    private final AdminCommentRepository adminCommentRepository;
+    private final com.example.seosancomplain.domain.attachment.AttachmentRepository attachmentRepository;
 
-    // 1. (익명) 민원 등록
     public ComplaintResponseDto createComplaint(ComplaintRequestDto dto) {
-        if (dto.getLatitude() == null || dto.getLongitude() == null) {
-            throw new CustomException(ErrorCode.VALIDATION_FAIL, "위치 정보(위도/경도)는 필수입니다.");
+        if (dto.getTitle() == null || dto.getTitle().isBlank()) {
+            throw new CustomException(ErrorCode.VALIDATION_FAIL, "제목을 입력해 주세요.");
+        }
+        if (dto.getContent() == null || dto.getContent().isBlank()) {
+            throw new CustomException(ErrorCode.VALIDATION_FAIL, "민원 내용을 입력해 주세요.");
+        }
+        if (dto.getCategory() == null) {
+            throw new CustomException(ErrorCode.VALIDATION_FAIL, "카테고리를 선택해 주세요.");
+        }
+        if (dto.getAddress() == null || dto.getAddress().isBlank()) {
+            throw new CustomException(ErrorCode.VALIDATION_FAIL, "주소(읍·면·동)를 입력해 주세요.");
         }
         if (!SeosanRegion.isValid(dto.getAddress())) {
             throw new CustomException(ErrorCode.VALIDATION_FAIL, "지역은 서산시 읍·면·동 중에서 선택해 주세요.");
         }
+
         Complaint complaint = toEntity(dto);
         complaintRepository.save(complaint);
         return toDto(complaint);
     }
 
-    // 2. 내 민원 전체 조회 (본인확인)
     public List<ComplaintResponseDto> getMyComplaints(String userName, String phoneNumber) {
         return complaintRepository.findByUserNameAndPhoneNumber(userName, phoneNumber)
                 .stream().map(this::toDto).collect(Collectors.toList());
     }
 
-    // 3. 내 민원 상세 조회 (본인확인)
     public ComplaintResponseDto getMyComplaint(Long id, String userName, String phoneNumber) {
         return toDto(getVerifiedComplaint(id, userName, phoneNumber));
     }
 
-    // 4. 내 민원 수정 (본인확인)
     public ComplaintResponseDto updateMyComplaint(Long id, ComplaintRequestDto dto) {
-        // 주소를 변경하려는 경우에만 검증
         if (dto.getAddress() != null && !SeosanRegion.isValid(dto.getAddress())) {
             throw new CustomException(ErrorCode.VALIDATION_FAIL, "지역은 서산시 읍·면·동 중에서 선택해 주세요.");
         }
@@ -62,19 +78,16 @@ public class ComplaintService {
         return toDto(complaint);
     }
 
-    // 5. 내 민원 삭제 (본인확인)
     public void deleteMyComplaint(Long id, String userName, String phoneNumber) {
         Complaint complaint = getVerifiedComplaint(id, userName, phoneNumber);
         complaintRepository.delete(complaint);
     }
 
-    // 6. (관리자/공용) 전체 민원 목록
     public List<ComplaintResponseDto> getAllComplaints() {
         return complaintRepository.findAll()
                 .stream().map(this::toDto).collect(Collectors.toList());
     }
 
-    // 7. (관리자) 민원 수정(본인확인 없이)
     public ComplaintResponseDto updateComplaint(Long id, ComplaintRequestDto dto) {
         if (dto.getAddress() != null && !SeosanRegion.isValid(dto.getAddress())) {
             throw new CustomException(ErrorCode.VALIDATION_FAIL, "지역은 서산시 읍·면·동 중에서 선택해 주세요.");
@@ -86,14 +99,17 @@ public class ComplaintService {
         return toDto(complaint);
     }
 
-    // 8. (관리자) 민원 삭제(본인확인 없이)
+    @Transactional
     public void deleteComplaint(Long id) {
-        Complaint complaint = complaintRepository.findById(id)
+        Complaint c = complaintRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("민원 정보를 찾을 수 없습니다."));
-        complaintRepository.delete(complaint);
-    }
 
-    // 9. (관리자) 민원 상태변경
+        adminCommentRepository.deleteByComplaintId(id);   // 자식 1
+        attachmentRepository.deleteByComplaintId(id);     // 자식 2 (있다면)
+        // 다른 자식 테이블들 있으면 위에 추가
+
+        complaintRepository.delete(c);                    // 마지막에 부모 삭제
+    }
     public ComplaintResponseDto updateStatus(Long id, ComplaintStatus status) {
         Complaint c = complaintRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("민원 정보를 찾을 수 없습니다."));
@@ -107,7 +123,6 @@ public class ComplaintService {
         return toDto(c);
     }
 
-    // 10. 대시보드 (디자인 스펙 반영)
     public DashboardResponseDto getDashboardStats(Integer daysOpt) {
         int days = (daysOpt == null || daysOpt <= 0) ? 30 : daysOpt;
 
@@ -163,7 +178,6 @@ public class ComplaintService {
         double averageResolutionPrev = round1(avgResolutionDays(prevFrom, prevTo));
         Double averageResolutionDelta = round1(averageResolutionDays - averageResolutionPrev);
 
-        // 지역 통계: Enum 기반으로 안전하게 집계
         List<String> regions = SeosanRegion.names();
         List<Complaint> all = complaintRepository.findAll();
         List<RegionStatDto> regionStats = regions.stream()
@@ -178,29 +192,23 @@ public class ComplaintService {
         return DashboardResponseDto.builder()
                 .totalCount(total)
                 .totalCountDelta(totalCountDelta)
-
                 .completedRate(completedRate)
                 .completedRateDelta(completedRateDelta)
-
                 .averageResolutionDays(averageResolutionDays)
                 .averageResolutionDelta(averageResolutionDelta)
-
                 .categoryCounts(categoryCounts)
                 .categoryRates(categoryRates)
-
                 .latestFive(latestFive)
                 .regionStats(regionStats)
                 .build();
     }
 
-    // ---- 헬퍼 ----
     private static Double pctDelta(long prev, long cur) {
         if (prev <= 0) return cur > 0 ? 100.0 : 0.0;
         return round1((cur - prev) * 100.0 / prev);
     }
     private static double round1(double v){ return Math.round(v * 10.0) / 10.0; }
 
-    /** 기간 내 완료 건들의 평균 처리시간(일) */
     private double avgResolutionDays(LocalDateTime from, LocalDateTime to) {
         return complaintRepository.findAll().stream()
                 .filter(c -> c.getStatus() == ComplaintStatus.COMPLETED)
@@ -210,7 +218,6 @@ public class ComplaintService {
                 .average().orElse(0.0);
     }
 
-    // --- 리포트/지도/카테고리 등 기존 메서드 ---
     public AdminReportDto getAdminReport(LocalDate from, LocalDate to) {
         LocalDateTime start = from.atStartOfDay();
         LocalDateTime end = to.plusDays(1).atStartOfDay();
@@ -227,46 +234,19 @@ public class ComplaintService {
                 .build();
     }
 
-    public List<MapPointDto> getComplaintMapPoints() {
-        List<Complaint> complaints = complaintRepository.findAll();
-        return complaints.stream()
-                .map(c -> new MapPointDto(c.getLatitude(), c.getLongitude(), c.getCategory(), c.getStatus()))
-                .collect(Collectors.toList());
-    }
-
-    public List<RegionReportDto> getRegionReport(LocalDate from, LocalDate to) {
-        LocalDateTime start = from.atStartOfDay();
-        LocalDateTime end = to.plusDays(1).atStartOfDay();
-        List<Object[]> results = complaintRepository.countByAddressAndStatusBetween(start, end);
-        List<RegionReportDto> list = new ArrayList<>();
-        for (Object[] row : results) {
-            String address = (String) row[0];
-            ComplaintStatus status = (ComplaintStatus) row[1];
-            Long count = (Long) row[2];
-            list.add(new RegionReportDto(address, status, count));
-        }
-        return list;
-    }
-
-    public List<RegionPriorityDto> getPriorityRegions() {
-        List<Object[]> results = complaintRepository.topAddressByStatus(ComplaintStatus.PENDING);
-        List<RegionPriorityDto> list = new ArrayList<>();
-        for (Object[] row : results) {
-            String address = (String) row[0];
-            Long count = (Long) row[1];
-            list.add(new RegionPriorityDto(address, count));
-        }
-        return list;
-    }
-
     public List<ComplaintResponseDto> getByCategory(ComplaintCategory category) {
-        return complaintRepository.findByCategory(category)
-                .stream()
-                .map(this::toDto)
-                .collect(Collectors.toList());
+        return complaintRepository
+                .findByCategoryAndStatus(category, ComplaintStatus.PENDING)
+                .stream().map(this::toDto).toList();
     }
 
-    // 본인확인(중복 로직 통합)
+    public Page<ComplaintResponseDto> getListByCategoryPaged(ComplaintCategory category, int page, int size) {
+        var pageable = PageRequest.of(page, size, Sort.by(Sort.Direction.DESC, "createdAt"));
+        return complaintRepository
+                .findByCategoryAndStatus(category, ComplaintStatus.PENDING, pageable)
+                .map(this::toDto);
+    }
+
     private Complaint getVerifiedComplaint(Long id, String userName, String phoneNumber) {
         Complaint complaint = complaintRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("민원 정보를 찾을 수 없습니다."));
@@ -276,23 +256,21 @@ public class ComplaintService {
         return complaint;
     }
 
-    // Entity 업데이트 (수정시)
     private void updateEntity(Complaint complaint, ComplaintRequestDto dto) {
+        if (dto.getTitle() != null)      complaint.setTitle(dto.getTitle());
         if (dto.getContent() != null)    complaint.setContent(dto.getContent());
         if (dto.getCategory() != null)   complaint.setCategory(dto.getCategory());
         if (dto.getAddress() != null)    complaint.setAddress(dto.getAddress());
-        if (dto.getLatitude() != null)   complaint.setLatitude(dto.getLatitude());
-        if (dto.getLongitude() != null)  complaint.setLongitude(dto.getLongitude());
         if (dto.getImageUrl() != null)   complaint.setImageUrl(dto.getImageUrl());
+        if (dto.getUserName() != null)   complaint.setUserName(dto.getUserName());
+        if (dto.getPhoneNumber() != null) complaint.setPhoneNumber(dto.getPhoneNumber());
     }
 
-    // DTO → Entity 변환 (등록시)
     private Complaint toEntity(ComplaintRequestDto dto) {
         return Complaint.builder()
+                .title(dto.getTitle())
                 .content(dto.getContent())
                 .address(dto.getAddress())
-                .latitude(dto.getLatitude())
-                .longitude(dto.getLongitude())
                 .category(dto.getCategory())
                 .imageUrl(dto.getImageUrl())
                 .userName(dto.getUserName())
@@ -301,53 +279,215 @@ public class ComplaintService {
                 .build();
     }
 
-    // Entity → DTO 변환 (응답)
     private ComplaintResponseDto toDto(Complaint c) {
         return ComplaintResponseDto.builder()
                 .id(c.getId())
+                .title(c.getTitle())
                 .content(c.getContent())
                 .address(c.getAddress())
-                .latitude(c.getLatitude())
-                .longitude(c.getLongitude())
                 .category(c.getCategory())
                 .status(c.getStatus())
-                .imageUrl(c.getImageUrl())
                 .userName(c.getUserName())
                 .phoneNumber(c.getPhoneNumber())
                 .createdAt(c.getCreatedAt() != null ? c.getCreatedAt().toString() : null)
                 .updatedAt(c.getUpdatedAt() != null ? c.getUpdatedAt().toString() : null)
+                .imageUrls(buildImageUrlsFor(c))
+                .rejectionReason(c.getRejectionReason())
+                .rejectionDetail(c.getRejectionDetail())
                 .build();
     }
 
-    public List<CategoryStatDto> getCategoryStatsByStatus(ComplaintStatus status) {
-        List<Object[]> rows = complaintRepository.countByCategoryAndStatus(status);
-        List<CategoryStatDto> list = new ArrayList<>();
-        for (Object[] r : rows) {
-            list.add(CategoryStatDto.builder()
-                    .category((ComplaintCategory) r[0])
-                    .count((Long) r[1])
+    @Transactional
+    public Mono<String> summarizeAndSave(Long complaintId) {
+        Complaint c = complaintRepository.findById(complaintId)
+                .orElseThrow(() -> new IllegalArgumentException("Complaint not found: " + complaintId));
+
+        if (c.getSummary() != null && !c.getSummary().isBlank()) {
+            return Mono.just(c.getSummary());
+        }
+
+        String text = c.getContent();
+        if (text == null || text.isBlank()) {
+            return Mono.error(new IllegalStateException("민원 내용이 비어있습니다."));
+        }
+
+        var refs = buildImageUrlsFor(c);
+        var httpUrls = refs.stream().filter(u -> u.startsWith("http://") || u.startsWith("https://")).toList();
+        var local    = refs.stream().filter(u -> !(u.startsWith("http://") || u.startsWith("https://"))).toList();
+
+        if (!local.isEmpty()) {
+            return Mono.fromCallable(() -> {
+                        var bytes = new java.util.ArrayList<byte[]>();
+                        for (var p : local) {
+                            try { bytes.add(java.nio.file.Files.readAllBytes(java.nio.file.Path.of(p))); } catch (Exception ignored) {}
+                        }
+                        return bytes;
+                    })
+                    .subscribeOn(reactor.core.scheduler.Schedulers.boundedElastic())
+                    .flatMap((java.util.List<byte[]> images) -> summarizerClient.summarizeMultipart(text, images))
+                    .map(res -> {
+                        c.setSummary(res.getSummary());
+                        complaintRepository.save(c);
+                        return res.getSummary();
+                    });
+        }
+
+        return summarizerClient.summarizeJson(text, httpUrls)
+                .publishOn(Schedulers.boundedElastic())
+                .map(res -> {
+                    c.setSummary(res.getSummary());
+                    complaintRepository.save(c);
+                    return res.getSummary();
+                });
+    }
+
+    public ComplaintDetailDto getComplaintDetail(Long id) {
+        var c = complaintRepository.findByIdAndStatus(id, ComplaintStatus.PENDING)
+                .orElseThrow(() -> new ResponseStatusException(
+                        HttpStatus.NOT_FOUND, "미처리 민원만 조회할 수 있습니다.")
+                );
+
+        List<String> imgs = buildImageUrlsFor(c);
+
+        var comments = adminCommentRepository.findByComplaintIdOrderByCreatedAtAsc(c.getId())
+                .stream()
+                .map(cm -> AdminCommentDto.builder()
+                        .id(cm.getId())
+                        .author(cm.getAuthor())
+                        .content(cm.getContent())
+                        .createdAt(cm.getCreatedAt().toString())
+                        .build())
+                .toList();
+
+        String maskedPhone = maskPhone(c.getPhoneNumber());
+
+        return ComplaintDetailDto.builder()
+                .id(c.getId())
+                .title(c.getTitle())
+                .content(c.getContent())
+                .address(c.getAddress())
+                .category(c.getCategory())
+                .status(c.getStatus())
+                .userName(c.getUserName())
+                .phoneNumberMasked(maskedPhone)
+                .imageUrls(imgs)
+                .createdAt(c.getCreatedAt() != null ? c.getCreatedAt().toString() : null)
+                .comments(comments)
+                .rejectionReason(c.getRejectionReason())
+                .rejectionDetail(c.getRejectionDetail())
+                .build();
+    }
+
+    public ComplaintDetailDto getPublicComplaintDetail(Long id) {
+        Complaint c = complaintRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("민원을 찾을 수 없습니다."));
+
+        List<String> imgs = buildImageUrlsFor(c);
+
+        var comments = adminCommentRepository.findByComplaintIdOrderByCreatedAtAsc(c.getId())
+                .stream()
+                .map(cm -> AdminCommentDto.builder()
+                        .id(cm.getId())
+                        .author(cm.getAuthor())
+                        .content(cm.getContent())
+                        .createdAt(cm.getCreatedAt().toString())
+                        .build())
+                .toList();
+
+        return ComplaintDetailDto.builder()
+                .id(c.getId())
+                .title(c.getTitle())
+                .content(c.getContent())
+                .address(c.getAddress())
+                .category(c.getCategory())
+                .status(c.getStatus())
+                .userName(null)
+                .phoneNumberMasked(null)
+                .imageUrls(imgs)
+                .createdAt(c.getCreatedAt() != null ? c.getCreatedAt().toString() : null)
+                .comments(comments)
+                .rejectionReason(c.getRejectionReason())
+                .rejectionDetail(c.getRejectionDetail())
+                .build();
+    }
+
+    public List<CategoryCountDto> getPendingCategoryCounts() {
+        List<CategoryCountDto> list = new ArrayList<>();
+        for (ComplaintCategory c : ComplaintCategory.values()) {
+            long cnt = complaintRepository.countByCategoryAndStatus(c, ComplaintStatus.PENDING);
+            list.add(CategoryCountDto.builder()
+                    .category(c)
+                    .count(cnt)
                     .build());
         }
         return list;
     }
 
-    public List<ComplaintMiniDto> getPriorityComplaints(ComplaintStatus status, int limit) {
-        var page = complaintRepository.findByStatus(
-                status,
-                PageRequest.of(0, limit, Sort.by(Sort.Direction.DESC, "createdAt"))
-        );
-        return page.stream()
-                .map(c -> ComplaintMiniDto.builder()
-                        .id(c.getId())
-                        .content(c.getContent())
-                        .address(c.getAddress())
-                        .status(c.getStatus())
-                        .createdAt(c.getCreatedAt() != null ? c.getCreatedAt().toString() : null)
-                        .build())
-                .toList();
+    private List<String> buildImageUrlsFor(Complaint c) {
+        LinkedHashSet<String> set = new LinkedHashSet<>();
+        var atts = attachmentRepository.findByComplaintIdOrderByUploadedAtAsc(c.getId());
+        for (var att : atts) {
+            String u = (att.getUrl() != null && !att.getUrl().isBlank()) ? att.getUrl() : att.getFilePath();
+            if (u != null && !u.isBlank()) set.add(u);
+        }
+        if (c.getImageUrl() != null && !c.getImageUrl().isBlank()) set.add(c.getImageUrl());
+        return new ArrayList<>(set);
     }
 
-    public Page<ComplaintResponseDto> getAllPaged(PageRequest pageable) {
-        return complaintRepository.findAll(pageable).map(this::toDto);
+    private String maskPhone(String phone) {
+        if (phone == null || phone.isBlank()) return null;
+        String digits = phone.replaceAll("\\D", "");
+        int n = digits.length();
+        if (n >= 7) {
+            String head = digits.substring(0, 3);
+            String tail = digits.substring(n - 4);
+            return head + "-****-" + tail;
+        }
+        return "***";
+    }
+
+    public AdminCommentDto addAdminComment(Long complaintId, String content) {
+        if (content == null || content.isBlank()) {
+            throw new CustomException(ErrorCode.VALIDATION_FAIL, "코멘트를 입력해 주세요.");
+        }
+
+        Complaint c = complaintRepository.findById(complaintId)
+                .orElseThrow(() -> new RuntimeException("민원을 찾을 수 없습니다."));
+
+        AdminComment saved = adminCommentRepository.save(
+                AdminComment.builder()
+                        .complaint(c)
+                        .author("관리자")
+                        .content(content)
+                        .createdAt(java.time.LocalDateTime.now())
+                        .build()
+        );
+
+        return AdminCommentDto.builder()
+                .id(saved.getId())
+                .author(saved.getAuthor())
+                .content(saved.getContent())
+                .createdAt(saved.getCreatedAt().toString())
+                .build();
+    }
+
+    public ComplaintResponseDto rejectComplaint(Long id,
+                                                RejectionReason reason,
+                                                String detail) {
+        if (reason == RejectionReason.OTHER &&
+                (detail == null || detail.isBlank())) {
+            throw new CustomException(ErrorCode.VALIDATION_FAIL, "기타 사유를 입력해 주세요.");
+        }
+
+        Complaint c = complaintRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("민원을 찾을 수 없습니다."));
+
+        c.setStatus(ComplaintStatus.REJECTED);
+        c.setRejectionReason(reason);
+        c.setRejectionDetail(reason == RejectionReason.OTHER ? detail : null);
+        c.setResolvedAt(null);
+        complaintRepository.save(c);
+
+        return toDto(c);
     }
 }
